index.html updated

--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <div class="wrapper">
+    <!-- <image/youtube-logo.png -->
+    <!-- https://archive.fo/Bss88/51a3832e6af6792add876216da444db23a4bea96.png -->
   <header>
-    <img src="image/youtube-logo.png" alt="youtube logo">
-    <a href=""><input type="text" placeholder="Search" ></a>
+    <span></span>
+    <img src="image/logo.png" alt="youtube logo">
+    <input type="text" placeholder="Search" >
+    <button class="btn">Sign in</button>
   </header>
-  <div class="grid">
-  <section>....</section>
-  <aside>
-    <nav>...</nav>
-  </aside>
-  <footer>....</footer></div>
+
+   <div class="sub-sect">
+     <small class="language">Choose your language</small>
+     <div class="preference">
+        <p class="view">You're viewing YouTube in <strong>English (US).</strong> You can <a href="#">change this preference below.</a></p>
+        <a href="#" class="more">Learn more</a>
+     </div>
+   </div>
+  
+  <section>
+
+      <iframe src="https://www.youtube.com/embed/Y4pzMHe_gp0" 
+      frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen></iframe>
+
+  </section>
+
+  </div>
 </body>
 </html>
+
