--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header>
     <span></span>
     <img src="image/logo.png" alt="youtube logo">
+    
     <input type="text" placeholder="Search" >
     <button class="btn">Sign in</button>
   </header>
@@ -28,10 +29,28 @@
   
   <section>
 
-      <iframe src="https://www.youtube.com/embed/Y4pzMHe_gp0" 
+      <iframe <!--src="https://www.youtube.com/embed/Y4pzMHe_gp0" -->
       frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen></iframe>
-
+      </section>
+  <section class="display">
+      <p class="title">How To Insert Image into Another Image Using Microsoft Word</p>
+      <div class="avatar">
+        <div id="inner-div">T</div>
+        <p>The Odin Project</p>
+        <button id="subscribe-btn">Subscribe</button>
+      </div><hr>
+      <a href="" class="addition">
+      <h2 title="Add to" id="plus">+</h2>
+      <p id="addto-tag" title="Add to">Add to</p>
+    </a>
+    <a href="" class="share-btn">
+    <img src="image/arrow-icon.png" alt="Share-Icon" title="Share" id="share-icon">
+    <p title="Share" id="share-tag">Share</p>
+    </a>
+    <span class="spanny"></span>
+    <span class="morespan">More</span>
+    
   </section>
 
   </div>
