added like, dislike, search icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <img src="image/logo.png" alt="youtube logo">
     
       <input type="text" placeholder="Search" >
+      <img src="image/search-icon.png" alt="Search-icon" title="Search">
       <button class="btn">Sign in</button>
     </header>
 
@@ -28,7 +29,7 @@
    <div class="container">
      <div class="small-cont-1">
         <section>
-          <iframe src= <!--"https://www.youtube.com/embed/Y4pzMHe_gp0"-->
+          <iframe src= "https://www.youtube.com/embed/Y4pzMHe_gp0" 
           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen></iframe>
         </section>
@@ -53,7 +54,12 @@
               </a>
               <span class="spanny"></span>
               <span class="morespan">More</span>
-  
+            <div class="like-dislike">
+              <img src="image/likeIcon.png"  alt="Like-icon" title="I like this" id="like-icon">
+              <img src="image/dislikeIcon.png" alt="Dislike-icon" title="I dislike this" id="dislike-icon">
+
+            </div>   
+              
             <section>
               <div id="info">
                 <h4 id="info-title">Published on Feb 27, 2014</h4>
@@ -62,9 +68,8 @@
                   blanditiis quo incidunt labore nihil, dolor impedit. Temporibus beatae esse eligendi illum harum.
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi ullam ab, aliquam dicta 
                   tempora minima nobis nemo alias porro, eos, officia incidunt cupiditate labore iste consectetur.
-                  Nemo aliquam harum voluptates.</p>
-                  <hr class="line">
-                  <a href="#"><h5>Show more</h5></a>
+                  Nemo aliquam harum voluptates.</p><hr class="line">
+                  <a href=""><h4 class="show-more">SHOW MORE</h4></a>
               </div>
           </div>
         </section>
