--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
   <div class="wrapper">
     <header>
-      <span></span>
+      <span class="line-span"></span>
       <img src="image/logo.png" alt="youtube logo">
     
       <input type="text" placeholder="Search" >
-      <img src="image/search-icon.png" alt="Search-icon" title="Search">
+      <!-- <button class="search"> -->
+        <!-- <img src="image/search-icon.png" alt="Search-icon" title="Search" id="mirror"> -->
+        <a href="#"><span class="search-mirror"></span></a>
+      <!-- </button> -->
       <button class="btn">Sign in</button>
     </header>
 
@@ -29,8 +32,9 @@
    <div class="container">
      <div class="small-cont-1">
         <section>
+          <h4>Heading</h4>
           <iframe src= "https://www.youtube.com/embed/Y4pzMHe_gp0" 
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen></iframe>
         </section>
         <section class="display">
@@ -42,80 +46,80 @@
               </div>
               <p>The Odin Project</p>
               <button id="subscribe-btn">Subscribe</button>
-              </div>
-              <hr>
-              <a href="" class="addition">
-                <h2 title="Add to" id="plus">+</h2>
-                <p id="addto-tag" title="Add to">Add to</p>
-              </a>
-              <a href="" class="share-btn">
-                <img src="image/arrow-icon.png" alt="Share-Icon" title="Share" id="share-icon">
-                <p title="Share" id="share-tag">Share</p>
-              </a>
-              <span class="spanny"></span>
-              <span class="morespan">More</span>
+            </div>
+            <hr>
+            <a href="" class="addition">
+              <h2 title="Add to" id="plus">+</h2>
+              <p id="addto-tag" title="Add to">Add to</p>
+            </a>
+            <a href="" class="share-btn">
+              <img src="image/arrow-icon.png" alt="Share-Icon" title="Share" id="share-icon">
+              <p title="Share" id="share-tag">Share</p>
+            </a>
+            <span class="spanny"></span>
+            <span class="morespan">More</span>
             <div class="like-dislike">
               <img src="image/likeIcon.png"  alt="Like-icon" title="I like this" id="like-icon">
               <img src="image/dislikeIcon.png" alt="Dislike-icon" title="I dislike this" id="dislike-icon">
-
             </div>   
-              
-            <section>
-              <div id="info">
-                <h4 id="info-title">Published on Feb 27, 2014</h4>
-                <p id="message">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Eligendi sint sed alias perspiciatis? Exercitationem asperiores mollitia provident
-                  blanditiis quo incidunt labore nihil, dolor impedit. Temporibus beatae esse eligendi illum harum.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi ullam ab, aliquam dicta 
-                  tempora minima nobis nemo alias porro, eos, officia incidunt cupiditate labore iste consectetur.
-                  Nemo aliquam harum voluptates.</p><hr class="line">
-                  <a href=""><h4 class="show-more">SHOW MORE</h4></a>
-              </div>
+          </div>    
+        </section>
+        <section>
+          <div id="info">
+              <h4 id="info-title">Published on Feb 27, 2014</h4>
+              <p id="message">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Eligendi sint sed alias perspiciatis? Exercitationem asperiores mollitia provident
+              blanditiis quo incidunt labore nihil, dolor impedit. Temporibus beatae esse eligendi illum harum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi ullam ab, aliquam dicta 
+              tempora minima nobis nemo alias porro, eos, officia incidunt cupiditate labore iste consectetur.
+              Nemo aliquam harum voluptates.</p><hr class="line">
+              <a href=""><h4 class="show-more">SHOW MORE</h4></a>
           </div>
         </section>
-        </section>
+
       </div>
+
      <div class="small-cont-2">
       <aside>
         <div class="outer-div">
           <iframe src= "https://www.youtube.com/embed/YJZCUhxNCv8"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen class="sidebar"></iframe>
           <h3>How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by Sean Lee</h3>
         </div>
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/p-89r5QvQvQ"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
           <h3>What Python Projects Should I Build to Get a Job?</h3>
         </div>
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/dSl_qnWO104"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
           <h3>Your First GitHub Pull Request (in 10 Mins)</h3>
         </div>
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/OdbBmvfThJY"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
           <h3>#0 Git Tutorial | What is Git? | Github</h3>
         </div>
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/7bE2mI4ePeU"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
           <h3>10 Programming Languages in ONLY 15 minutes!</h3>
         </div>
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/FQsBmnZvBdc"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
           <h3>Git & GitHub: Pull requests (10/11)</h3>
         </div>
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/e8QY0NDWqzk"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
           <h3>The Most Successful People Explain Why a College Degree is USELESS</h3>
         </div>
