title added to magnifying glass

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="image/logo.png" alt="youtube logo">
       
       <input type="text" placeholder="Search" class="input-icon">
-      <div class="tool"><a href="#"><img src="image/glass.png" alt="Magnifying tool"></a></div>
+      <div class="tool" title="Search"><a href="#"><img src="image/glass.png" alt="Magnifying tool"></a></div>
       
       <div class="group">
         <ul>
