index.html updated

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         </div>
 
         <div class="outer-div">
+
           <iframe src="https://www.youtube.com/embed/FQsBmnZvBdc"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
@@ -144,15 +145,17 @@
               <span class= "side-views"> Code Course</span>
               <span class= "side-views"> 78,624 views</span>
           </h3>
+
         </div>
 
         <div class="outer-div">
           <iframe src="https://www.youtube.com/embed/e8QY0NDWqzk"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen class="sidebar"></iframe>
-          <h3>The Most Successful People Explain Why a College Degree is USELESS
-              <span class= "side-views">Motivation Madness</span>
-              <span class= "side-views">5,320,167 views</span>
+          <h3>
+            The Most Successful People Explain Why a College Degree is USELESS
+            <span class= "side-views">Motivation Madness</span>
+            <span class= "side-views">5,320,167 views</span>
           </h3>
         </div>
       </aside>
