.stickler.yml added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
           <iframe src= "https://www.youtube.com/embed/Y4pzMHe_gp0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen></iframe></h6>
+          allowfullscreen></iframe>
         </section>
         <section class="display">
           <div id="align">
